client/src/components/modules/navbar.module.css
.bar {
    display: flex;
    width: 100%;
    /* this instead of using an hr below the navbar*/
    border-bottom: 1.5px solid lightgray;
}

.siteTitle {
    margin: 15px;
    padding: 0;
}

.bar a {
    text-decoration: none;
}

.item {
    font-size: 16px;
    margin: 20px 10px 00px 10px;
}
.push {
    margin-left: auto;
}

.item:hover, .dropItem:hover {
    /* font-weight: 700; */
    color: darkgray;
    transition: 0.2s ease;
}

.active {
    font-weight: 700;
}

li.dropdown {
    display: inline-block;
}

.dropdownContent {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 125px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropItem {
    color: black;
    display: block;
    text-align: left;
    margin-bottom: 12px;
}

.dropdown:hover .dropdownContent {
    display: block;
}

.dropdown:hover .arrow {
    transform: rotate(180deg);
}

.arrow {
    width: 16px;
}

/* .arrow:hover {
    transform: rotate(180deg);
} */

@media only screen and (max-width: 700px) {
    .bar {
        display: block;
    }
    .push {
        margin-left: 15px;
    }
  }

